Added JWT handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDiale
 spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
-bezkoder.app.jwtSecret= 1pZ2kSEaL1c20p13r38z7ak
-bezkoder.app.jwtExpirationMs= 86400000
+pkacp.app.jwtSecret= 1pZ2kSEaL1c20p13r38z7ak
+pkacp.app.jwtExpirationMs= 86400000
