Added timezone to database connection string

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/table_reservations_development?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/table_reservations_development?useSSL=FALSE&serverTimezone=Europe/Belgrade
 spring.datasource.username= root
 spring.datasource.password= password
 
